build (java): Add gradle compilation fix